# libminCrypt

./: AUTHORS  Makefile.am  README  TODO  autobuild.sh  configure.ac  libmincrypt.spec
examples/: Makefile.am  mincrypt-tui.c
include/: Makefile.am
src/: Makefile.am  asymmetric.c  byteops.c  libmincrypt.la  libmincrypt_la-asymmetric.lo  libmincrypt_la-base64.lo  libmincrypt_la-byteops.lo  libmincrypt_la-crc32.lo  libmincrypt_la-mincrypt.lo  mincrypt  mincrypt-tui.c  mincrypt.c  mincrypt.h  utils.c
src/.deps/: libmincrypt_la-asymmetric.Plo  libmincrypt_la-base64.Plo  libmincrypt_la-byteops.Plo  libmincrypt_la-crc32.Plo  libmincrypt_la-mincrypt.Plo
tests/: AKD-test.sh  DH-test.sh  runtests.sh  test-asymmetric.sh  test-binary.sh
